--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     </parent>
 
     <groupId>org.stowers.microscopy</groupId>
-    <artifactId>imagej_plugins</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>simr_cjw_plugins</artifactId>
+    <version>0.01</version>
 
     <properties>
         <main-class>org.stowers.microscopy.Main</main-class>
@@ -71,11 +71,11 @@
             <artifactId>TurboReg_</artifactId>
             <version>2.0.1-SNAPSHOT</version>
         </dependency>
-        <!-- <dependency>
+        <dependency>
             <groupId>ome</groupId>
             <artifactId>bioformats_package</artifactId>
             <version>LATEST</version>
-        </dependency> -->
+        </dependency>
         <dependency>
             <groupId>net.imglib2</groupId>
             <artifactId>imglib2</artifactId>
@@ -140,6 +140,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <repositories>
