--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.scijava</groupId>
         <artifactId>pom-scijava</artifactId>
-        <version>29.2.1</version>
+        <version>31.1.0</version>
         <relativePath />
     </parent>
 
@@ -100,10 +100,6 @@
             <groupId>net.imglib2</groupId>
             <artifactId>imglib2-realtransform</artifactId>
         </dependency>
-        <dependency>
-            <groupId>net.imglib2</groupId>
-            <artifactId>imglib2-ui</artifactId>
-        </dependency>
         <!--<dependency>-->
         <!--<groupId>net.imglib2</groupId>-->
         <!--<artifactId>imglib2</artifactId>-->
@@ -151,7 +147,7 @@
     <repositories>
         <repository>
             <id>imagej.public</id>
-            <url>http://maven.imagej.net/content/groups/public</url>
+            <url>https://maven.imagej.net/content/groups/public</url>
         </repository>
     </repositories>
 </project>
