--- a/pom.xml
+++ b/pom.xml
@@ -73,12 +73,11 @@
             <version>1.4.2.1</version>
         </dependency>
         -->
-        <!-- <dependency>
+        <dependency>
             <groupId>ome</groupId>
             <artifactId>bioformats_package</artifactId>
             <version>6.11.0</version>
         </dependency>
-        -->
         <dependency>
             <groupId>net.imagej</groupId>
             <artifactId>ij</artifactId>
